/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 * <p>
 * http://www.apache.org/licenses/LICENSE-2.0
 * <p>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package lance.index.pb;

// The type of an index.
enum IndexType {
  NONE = 0;

  // Flat index
  VECTOR_FLAT = 100;

  // IVF + PQ index
  VECTOR_IVF_PQ = 101;
}

message Index {
  // The unique index name in the dataset.
  string name = 1;

  // Columns to be used to build the columns.
  repeated string columns = 2;

  // The version of the dataset this index was built from.
  uint64 dataset_version = 3;

  // The [`IndexType`] of the index.
  IndexType index_type = 4;

  oneof implementation {
    VectorIndex vector_index = 5;
  }
}

// Inverted Index File Metadata.
message IVF {
  // Centroids of parittions. `dimension * num_partitions` of float32s.
  repeated float centroids = 1;

  // File offset of each partition.
  repeated uint64 offsets = 2;

  // Number of records in the partition.
  repeated uint32 lengths = 3;
}

// Metadata of Product Quantilization.
message ProductQuantilizationInfo {
  // The number of bits to present a centroid.
  uint32 num_bits = 1;

  // Number of subvectors.
  uint32 num_subvectors = 2;
}

// Vertor Index Metadata
message VectorIndex {
  // Index specificdation version.
  uint32 spec_version = 1;

  /// Vector dimension;
  uint32 dimension = 2;

  // Invert file index info.
  IVF ivf = 3;

  // Product quantilization info.
  ProductQuantilizationInfo pq = 4;
}